<resources>
    <string name="app_name">RWCL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="correo">Correo</string>
    <string name="proveedor">Proveedor</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="google">Google</string>
    <string name="prefs_file">com.example.rwcl.PREFERENCE_FILE_KEY</string>
</resources>