<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/correoView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/correo"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="38dp" />

    <TextView
        android:id="@+id/proveedorView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/proveedor"
        app:layout_constraintTop_toBottomOf="@+id/correoView"
        tools:layout_editor_absoluteX="38dp" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proveedorView" />
</androidx.constraintlayout.widget.ConstraintLayout>